# Implementation-RoboSubtaskNet

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  LICENSE  PIPELINE_V2_SPEC.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
configs/: boundary.yaml  breakfast.yaml  default.yaml  gtea.yaml  lerobot.yaml  pipeline.yaml  robosubtask.yaml  vlm.yaml
configs/grammar/: robosubtask.yaml
docs/: BOUNDARY_DETECTION_NOTES.md  VLM_LORA_NOTES.md
scripts/: create_pr.sh  evaluate.py  extract_features.py  extract_features_boundary.py  extract_features_lerobot.py  inference.sh  inference_lerobot.py  inference_pipeline.py  run_robot.py  train.py  train.sh  train_boundary.py  train_lerobot.py  train_vlm.py  visualize_segmentation.py
src/robosubtasknet/: __init__.py
src/robosubtasknet/boundary/: __init__.py  dataset.py  losses.py  model.py  postprocess.py
src/robosubtasknet/data/: __init__.py  annotation.py  augmentations.py  dataset.py  grammar.py  lerobot_writer.py
src/robosubtasknet/eval/: __init__.py  evaluator.py  metrics.py
src/robosubtasknet/execution/: __init__.py  detection.py  dmp.py  servoing.py
src/robosubtasknet/features/: __init__.py  extract.py  flow.py  i3d.py
src/robosubtasknet/losses/: __init__.py  composite.py  tmse.py  transition.py
src/robosubtasknet/models/: __init__.py  fusion.py  robosubtasknet.py  tcn.py
src/robosubtasknet/pipeline/: __init__.py  inference.py
src/robosubtasknet/training/: __init__.py  callbacks.py  scheduler.py  trainer.py
src/robosubtasknet/vlm/: __init__.py  collator.py  dataset.py  inference.py  model.py  training.py
tests/: conftest.py  test_fusion.py  test_grammar.py  test_losses.py  test_metrics.py  test_overfit_one_video.py  test_tcn.py  test_train_step.py
