[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robosubtasknet"
version = "0.1.0"
description = "Reimplementation of RoboSubtaskNet: temporal sub-task segmentation for human-to-robot skill transfer (Sharma et al., arXiv:2602.10015)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "RoboSubtaskNet contributors" }]
keywords = [
    "action-segmentation",
    "temporal-convolutional-network",
    "robotics",
    "imitation-learning",
    "i3d",
    "ms-tcn",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core
    "torch>=2.1,<2.5",
    "torchvision>=0.16",
    "torchaudio>=2.1",
    "pytorchvideo>=0.1.5",
    "einops>=0.7",
    "numpy>=1.24",
    "scipy>=1.11",
    # Video / flow
    "av>=11",
    "opencv-python>=4.8",
    "decord>=0.6",
    # Config & logging
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pyyaml>=6",
    "tqdm>=4.66",
    "tensorboard>=2.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "wandb>=0.16",
]
flow-tvl1 = [
    "opencv-contrib-python>=4.8",
]
robot = [
    "pydmps",
    "ultralytics",
    "transformers",
    "roboticstoolbox-python",
]

[project.urls]
Homepage = "https://github.com/robosubtasknet/robosubtasknet"
Repository = "https://github.com/robosubtasknet/robosubtasknet"
"Paper (arXiv)" = "https://arxiv.org/abs/2602.10015"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["robosubtasknet*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length is handled by formatter
    "B008", # function calls in argument defaults (common for torch.tensor(...))
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "decord.*",
    "pytorchvideo.*",
    "torchvision.*",
    "av.*",
    "pydmps.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a CUDA device",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src/robosubtasknet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
